fixed styling issue on shorter screens with element overlap

--- a/styles.css
+++ b/styles.css
@@ -105,7 +105,7 @@ a {
   margin: 0 auto;
   position: absolute;
   left: 24vw;
-  top: 25vh;
+  top: 20vh;
 }
 .title-lead {
   margin-top: -80px;
@@ -119,7 +119,7 @@ a {
 .scroll-ani {
   position: absolute;
   display: block;
-  top: 80vh;
+  top: 85vh;
   left: 49vw;
   height: 35px;
   width: 20px;
